--- a/devede.css
+++ b/devede.css
@@ -2,7 +2,43 @@
     margin: 0;
 }
 
+body {
+    min-height: 100vh;
+    background-color: blanchedalmond;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+header {
+    display: flex;
+    justify-content: center;
+    color:hotpink;
+}
+
 main {
     display: flex;
-    
+    flex-direction: column;
+    align-items: center;
+}
+
+.inputFields {
+    display: flex;
+    margin: 1rem;
+}
+
+input {
+    margin: 1rem;
+    height: 30px;
+    text-align: center;
+}
+.addShow {
+    display: flex;
+}
+button {
+    margin: 1rem;
+    height: 30px;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
 }
