--- a/devede.css
+++ b/devede.css
@@ -35,11 +35,13 @@ section {
     display: flex;
     flex-direction: column;
     margin-top: 1rem;
+    align-items: center;
+ 
 }
 .favMovieDiv {
- display: flex;
- align-items: center;
- justify-content: center;
+    display: flex;
+    align-items: center;
+    height: 45px;
 }
 .inputFields {
     display: flex;
@@ -92,7 +94,6 @@ button:active {
     display: none;
 }
 .queryEl {
-    margin-top: 2rem;
     display: flex;
     justify-content: center;
 }
@@ -111,3 +112,13 @@ button:active {
     background-color: yellow;
     font-weight: 600;
    }
+.queryFav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.qContainer {
+    display: flex;
+    flex-direction: row;
+}
